0.0.6: add ring attach endpoint
